2004-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtksettings.c: Add Gtk::Setting.rc_property_parse_*.
	* sample/misc/settings.rb: Added.

2004-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcontainer.c: Change arguments of Gtk::Container.install_child_property.
	* sample/misc/properties.rb: ditto.
	
2004-01-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcontainer.c: Add Gtk::Container.install_child_property.
	* sample/misc/properties.rb: Added.
	* src/lib/gtk2.rb: Require Atk module.

2004-01-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/style_property.r[bc]: Added.
	* src/rbgtkwidget.c: gtk_widget_class_install_style_property_parser() 
	was implemented as Gtk::Widget.install_style_property(){...}.

2004-01-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Fix Gtk::Widget.style_properties.

2004-01-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Add Gtk::Widget.install_style_property, 
	.style_property.

2004-01-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkallocation.c: Add Gtk::Allocation#to_rect. 
	* src/rbgtktextbuffer.c: Gtk::TextBuffer#insert_with_tags, 
	#insert_pixbuf,	#insert_child_anchor are deprecated. 
	Use Gtk::TextBuffer#insert instead.
	* sample/gtk-demo/textview.rb: Apply above changes.

2003-01-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkspinbutton.c: Fix a bug of Gtk::SpinButton#range.
	Pointed out by Thomas Hunger.

2003-12-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextiter.c: Gtk::TextIter#char returns String. 

2003-12-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeviewcolumn.c: Fix a segfault in Gtk::TreeViewColumn#set_cell_data_func.

2003-12-21  Kenichi Komiya <kom@mail1.accsnet.ne.jp>

	* src/rbgtkbindingset.c: Fix a segfault.
	* src/rbgtktexttagtable.c, rbgtktexttag.c, rbgdkcolormap.c: 
	Use G_INITIALIZE instead of RBGTK_INITIALIZE, because they are not Gtk::Object.

2003-12-20  Kenichi Komiya <kom@mail1.accsnet.ne.jp>
